rust/como-irc/target/debug/build/crossbeam-utils-d887a846fd133113/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
    --> <anon>:1:38
     |
1    |   pub type Probe = core::sync::atomic::AtomicU128;
     |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
     |
    ::: /home/comodino/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/sync/atomic.rs:2956:1
     |
2956 | / atomic_int! {
2957 | |     cfg(target_has_atomic = "16"),
2958 | |     cfg(target_has_atomic_equal_alignment = "16"),
2959 | |     stable(feature = "integer_atomics_stable", since = "1.34.0"),
...    |
2971 | |     u16 AtomicU16
2972 | | }
     | |_- similarly named struct `AtomicU16` defined here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
